# routes/api.php
@@ -34,8 +34,10 @@ Route::prefix('/v1')->namespace('Api\V1')->group(function (){
     Route::get('products_by_category/{id}', [ProductApiController::class, 'productsByCategory']);
     Route::get('products_by_brand{id}', [ProductApiController::class, 'productsByBrand']);
     Route::get('product_details/{id}', [ProductApiController::class, 'productDetail']);
+    Route::post('search_product', [ProductApiController::class, 'searchProduct']);
 });
 
 Route::prefix('/v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(function (){
     Route::post('/register', [UserApiController::class, 'register']);
+    Route::post('/save_product_comment', [ProductApiController::class, 'saveComment']);
 });
